[workspace]
resolver = "2"

package.version = "0.1.0"
package.edition = "2021"
package.license = "Apache-2.0"

members = [
  "crates/auth/*",
  "crates/custom-connector",
  "crates/engine",
  "crates/execute",
  "crates/lang-graphql",
  "crates/metadata-resolve",
  "crates/metadata-schema-generator",
  "crates/open-dds",
  "crates/query-usage-analytics",
  "crates/schema",
  "crates/utils/*",
]

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# disable certain pedantic warnings
doc_markdown = "allow"
implicit_hasher = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
return_self_not_must_use = "allow"
struct_field_names = "allow"
wildcard_imports = "allow"
# disable these for now, but we should probably fix them
result_large_err = "allow"
similar_names = "allow"
too_many_arguments = "allow"
too_many_lines = "allow"
unnecessary_box_returns = "allow"
unnecessary_wraps = "allow"
unreadable_literal = "allow"
unused_async = "allow"
used_underscore_binding = "allow"

[workspace.lints.rustdoc]
private_intra_doc_links = "allow"
