[package]
name = "engine"
version = "3.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "engine"
path = "bin/engine/main.rs"

[dependencies]
indexmap = { version = "2", features = ["serde"] }
thiserror = "1.0"
hasura-authn-core = { path = "../hasura-authn-core" }
lang-graphql = { path = "../lang-graphql" }
tracing-util = { path = "../tracing-util" }
ndc-client = { git = "https://github.com/hasura/ndc-spec.git", tag = "v0.1.0-rc.13" }
open-dds = { path = "../open-dds" }
# util = { path = "../util" }
serde = "1.0.152"
serde_json = "1.0.92"
reqwest = { version = "^0.11", features = ["json", "multipart"] }
opentelemetry = "0.20.0"
opentelemetry_sdk = "0.20.0"
schemars = { version = "0.8.12", features = ["smol_str"] }
async-trait = "0.1.67"
derive_more = "0.99.17"
base64 = "0.21.2"
transitive = "0.5.0"
lazy_static = "1.4.0"
strum = { version = "^0.25.0" }
strum_macros = { version = "^0.25.2" }
itertools = "0.10.5"
url = "2.4.1"

# dependencies for authentication and execute
hasura-authn-webhook = { path = "../hasura-authn-webhook" }
hasura-authn-jwt = { path = "../hasura-authn-jwt" }
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1.26.0", features = [
    "macros",
    "rt-multi-thread",
    "parking_lot",
] }
axum = { version = "0.6.20" }
tower-http = { version = "0.4", features = ["trace", "cors"] }
uuid = "1.3.0"
bincode = "1.3.3"
regex = "1.7.3"
json_value_merge = "2.0"
async-recursion= "1.0.5"
nonempty = "0.8"

[dev-dependencies]
goldenfile = "1.4.5"
tokio-test = "0.4.2"
criterion = { version = "0.4", features = ["html_reports", "async_tokio"] }

[[bench]]
name = "execute"
harness = false
