[package]
name = "tracing-util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99.17"
opentelemetry = { version = "0.20.0", features = ["rt-tokio"] }
opentelemetry-otlp = "0.13.0"
opentelemetry_sdk = "0.20.0"
opentelemetry-semantic-conventions = "0.12.0"
strum = "0.25.0"
http = "0.2.9"

[dev-dependencies]
axum = "0.6.20"
