[package]
name = "tracing-util"
version.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99.17"
opentelemetry = "0.21.0"
opentelemetry-otlp = "0.14.0"
opentelemetry_sdk = { version = "0.21.2", features = ["rt-tokio"] }
opentelemetry-semantic-conventions = "0.13.0"
opentelemetry-stdout = { version = "0.2.0", features = ["trace"] }
strum = "0.25.0"
http = "0.2.9"

[dev-dependencies]
axum = "0.6.20"
