cabal-version:  3.6

name:           aeson-ordered
version:        0.1.0.0
description:    Provides a data type that mirrors Aeson's 'Value', but that preserves order of object properties using an insertion-ordered map.
homepage:       https://github.com/hasura/github-engine-mono#readme
bug-reports:    https://github.com/hasura/github-engine-mono/issues
author:         Anon Ray <anon@hasura.io>,
                Bryan O'Sullivan <bos@serpentine.com>,
                MailRank, Inc.
maintainer:     Anon Ray <anon@hasura.io>,
                Bryan O'Sullivan <bos@serpentine.com>,
                MailRank, Inc.
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    CHANGELOG.md
    LICENSE

source-repository head
  type: git
  location: https://github.com/hasura/github-engine-mono

library
  exposed-modules:
      Data.Aeson.Ordered
  other-modules:
      Paths_aeson_ordered
  hs-source-dirs:
      src
  default-extensions:
      BangPatterns
      DeriveDataTypeable
      DeriveGeneric
      DerivingStrategies
      GeneralizedNewtypeDeriving
      ImportQualifiedPost
      LambdaCase
      OverloadedStrings
      StrictData
  ghc-options:
    -foptimal-applicative-do
    -- Taken from https://medium.com/mercury-bank/enable-all-the-warnings-a0517bc081c3
    -Weverything
    -Wno-missing-exported-signatures
    -Wno-missing-import-lists
    -Wno-missed-specialisations
    -Wno-all-missed-specialisations
    -Wno-unsafe
    -Wno-safe
    -Wno-missing-local-signatures
    -Wno-monomorphism-restriction
    -Wno-missing-kind-signatures
    -Wno-missing-safe-haskell-mode
    -- We want these warnings, but the code doesn't satisfy them yet:
    -Wno-missing-deriving-strategies
    -Wno-deriving-typeable
    -Wno-implicit-prelude
  build-depends:
      aeson
    , attoparsec
    , base
    , bytestring
    , hashable
    , insert-ordered-containers
    , lens
    , lens-aeson
    , scientific
    , text
    , vector
  default-language: Haskell2010
