cabal-version: 2.2
name: api-tests
version: 1.0.0

executable api-tests
  build-tool-depends: hspec-discover:hspec-discover

  build-depends:
    , HUnit
    , aeson
    , base
    , bytestring
    , dc-api
    , fast-logger
    , graphql-parser
    , hasura-prelude
    , hspec
    , hspec-core
    , http-conduit
    , http-types
    , lens
    , lens-aeson
    , managed
    , morpheus-graphql
    , pg-client
    , postgresql-simple
    , postgres-options
    , safe-exceptions
    , split
    , sop-core
    , test-harness
    , text
    , unordered-containers
    , uuid
    , vector

  default-extensions:
    BlockArguments
    DataKinds
    DeriveGeneric
    DerivingStrategies
    ImportQualifiedPost
    LambdaCase
    MultiWayIf
    NamedFieldPuns
    NoImplicitPrelude
    OverloadedStrings
    PatternGuards
    RecordWildCards
    ScopedTypeVariables
    TypeApplications
    TypeFamilies

  hs-source-dirs: test
  default-language: Haskell2010

  -- Turning off optimizations is intentional; tests aren't
  -- performance sensitive and waiting for compilation is a problem.
  ghc-options:
    -Wall
    -Werror
    -threaded
    -rtsopts "-with-rtsopts=-N"

  main-is: Spec.hs
  other-modules:
    SpecHook
    Test.API.ExplainSpec
    Test.API.Metadata.ComputedFieldsSpec
    Test.API.Metadata.InconsistentSpec
    Test.API.Schema.RunSQLSpec
    Test.Auth.Authorization.DisableRootFields.Common
    Test.Auth.Authorization.DisableRootFields.DefaultRootFieldsSpec
    Test.Auth.Authorization.DisableRootFields.SelectPermission.DisableAllRootFieldsSpec
    Test.Auth.Authorization.DisableRootFields.SelectPermission.EnableAggSpec
    Test.Auth.Authorization.DisableRootFields.SelectPermission.EnableAllRootFieldsSpec
    Test.Auth.Authorization.DisableRootFields.SelectPermission.EnablePKSpec
    Test.Auth.Authorization.DisableRootFields.SelectPermission.RelationshipSpec
    Test.Databases.BigQuery.Queries.SpatialTypesSpec
    Test.Databases.BigQuery.Queries.TypeInterpretationSpec
    Test.Databases.Postgres.BackendOnlyPermissionsSpec
    Test.Databases.Postgres.DataValidation.PermissionSpec
    Test.Databases.Postgres.JsonbSpec
    Test.Databases.Postgres.TimestampSpec
    Test.Databases.Postgres.UniqueConstraintsSpec
    Test.Databases.SQLServer.DefaultValues.OnConflictSpec
    Test.Databases.SQLServer.InsertVarcharColumnSpec
    Test.Databases.SQLServer.VarcharLiteralsSpec
    Test.DataConnector.AggregateQuerySpec
    Test.DataConnector.MetadataApiSpec
    Test.DataConnector.MockAgent.AggregateQuerySpec
    Test.DataConnector.MockAgent.BasicQuerySpec
    Test.DataConnector.MockAgent.ErrorSpec
    Test.DataConnector.MockAgent.QueryRelationshipsSpec
    Test.DataConnector.MockAgent.TransformedConfigurationSpec
    Test.DataConnector.QuerySpec
    Test.DataConnector.SelectPermissionsSpec
    Test.EventTriggers.MSSQL.EventTiggersUniqueNameSpec
    Test.EventTriggers.MSSQL.EventTriggerDropSourceCleanupSpec
    Test.EventTriggers.MSSQL.EventTriggersUntrackTableCleanupSpec
    Test.EventTriggers.PG.EventTriggersExtensionSchemaSpec
    Test.EventTriggers.PG.EventTriggersRecreationSpec
    Test.EventTriggers.PG.EventTriggersReplaceMetadataCleanupSpec
    Test.EventTriggers.PG.EventTriggersRunSQLSpec
    Test.EventTriggers.PG.EventTriggersUniqueNameSpec
    Test.EventTriggers.PG.EventTriggersUntrackTableCleanupSpec
    Test.Harness.Quoter.YamlSpec
    Test.HelloWorldSpec
    Test.Mutations.Delete.AllSpec
    Test.Mutations.Delete.FieldSpec
    Test.Mutations.Delete.NestedFieldSpec
    Test.Mutations.Delete.PrimaryKeySpec
    Test.Mutations.Insert.MultipleSpec
    Test.Mutations.Insert.SingleSpec
    Test.Mutations.MultiplePerRequest.UpdateManySpec
    Test.Mutations.Update.FieldSpec
    Test.Mutations.Update.PrimaryKeySpec
    Test.Mutations.Upsert.OnConflictSpec
    Test.Queries.AggregationSpec
    Test.Queries.DistinctSpec
    Test.Queries.FilterSearch.AggregationPredicatesSpec
    Test.Queries.FilterSearch.FilterSearchSpec
    Test.Queries.NestedObjectSpec
    Test.Queries.Paginate.LimitSpec
    Test.Queries.Paginate.OffsetSpec
    Test.Queries.Simple.NoQueriesAvailableSpec
    Test.Queries.Simple.ObjectQueriesSpec
    Test.Queries.Simple.OperationNameSpec
    Test.Queries.Simple.PrimaryKeySpec
    Test.Queries.SortSpec
    Test.Queries.VariablesAliasesFragments.AliasesSpec
    Test.Queries.VariablesAliasesFragments.Directives.DirectivesSpec
    Test.Queries.VariablesAliasesFragments.Directives.IncludeAndSkipSpec
    Test.Queries.VariablesAliasesFragments.Directives.IncludeSpec
    Test.Queries.VariablesAliasesFragments.Directives.SkipSpec
    Test.Queries.VariablesAliasesFragments.FragmentsSpec
    Test.Queries.VariablesAliasesFragments.VariablesSpec
    Test.Regression.AggregateBoolExpConflictSpec
    Test.Regression.ArrayLiteralTextEncodingSpec
    Test.Regression.DoNotTruncateSessionVariables8158Spec
    Test.Regression.DropColumnWithPermissions8415Spec
    Test.Regression.InsertOnConflict8260Spec
    Test.Regression.LongIdentifiers3796Spec
    Test.Regression.MultiColumnObjectRelationshipsSpec
    Test.Regression.NullRemoteRelationship8345Spec
    Test.Regression.NullsOrderParsing8780Spec
    Test.Regression.ObjectRelationshipsLimit7936Spec
    Test.Regression.StreamConflictSpec
    Test.Regression.UsingTheSameFunctionForRootFieldAndComputedField8643Spec
    Test.Schema.ComputedFieldsSpec
    Test.Schema.ConflictsSpec
    Test.Schema.CustomFieldNames.MutationSpec
    Test.Schema.CustomFieldNames.QuerySpec
    Test.Schema.CustomFieldsSpec
    Test.Schema.DataValidations.Permissions.InsertSpec
    Test.Schema.DataValidations.Permissions.SelectSpec
    Test.Schema.DefaultValues.DefaultValuesSpec
    Test.Schema.DefaultValues.OnConflictSpec
    Test.Schema.EnumsSpec
    Test.Schema.RemoteRelationships.FromRemoteSchemaSpec
    Test.Schema.RemoteRelationships.MetadataAPI.ClearMetadataSpec
    Test.Schema.RemoteRelationships.MetadataAPI.Common
    Test.Schema.RemoteRelationships.MetadataAPI.DropSource.DBtoDBRelationshipSpec
    Test.Schema.RemoteRelationships.MetadataAPI.DropSource.RSToDBRelationshipSpec
    Test.Schema.RemoteRelationships.XToDBArrayRelationshipSpec
    Test.Schema.RemoteRelationships.XToDBObjectRelationshipSpec
    Test.Schema.RemoteRelationships.XToRemoteSchemaRelationshipSpec
    Test.Schema.TableRelationships.ArrayRelationshipsSpec
    Test.Schema.TableRelationships.ObjectRelationshipsSpec
    Test.Schema.ViewsSpec
    Test.Subscriptions.DerivedDataSpec
    Test.Subscriptions.RowUpdatesSpec
    Test.Subscriptions.StreamingSubscriptionsSpec

executable render-feature-matrix
  build-depends:
    , aeson
    , attoparsec
    , base
    , bytestring
    , containers
    , lucid2
    , mtl
    , text

  default-extensions:
    BlockArguments
    DataKinds
    DeriveGeneric
    DerivingStrategies
    ImportQualifiedPost
    MultiWayIf
    NamedFieldPuns
    NoImplicitPrelude
    OverloadedStrings
    PatternGuards
    RecordWildCards
    ScopedTypeVariables
    TypeApplications
    TypeFamilies

  hs-source-dirs: src-render-feature-matrix
  default-language: Haskell2010

  -- Turning off optimizations is intentional; tests aren't
  -- performance sensitive and waiting for compilation is a problem.
  ghc-options:
    -Wall
    -Werror
    -threaded
    -rtsopts "-with-rtsopts=-N"

  main-is: Main.hs
